# embedding.cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bert.cpp  bert.h  bert_gguf.h  gguf.h  llama.h  requirements.txt  tokenizer.cpp  tokenizer.h  tokenizers-cpp
benchmarks/: print_tables.py  run_mteb.py
examples/: CMakeLists.txt  sample_client.py  test_embedding.cpp
models/: convert-to-ggml.py  convert-to-gguf.py  quantize.cpp  run_conversions.sh
